feat: Add support for MongoAnnotationProcessor